--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,28 +1,32 @@
-# docker-compose.production.yml
 version: '3'
 
 volumes:
   pg_data_production:
   static_volume:
 
-# Всё отличие — заменяем build на image и указываем, какой образ использовать
 services:
   db:
     image: postgres:13.10
     env_file: .env
     volumes:
       - pg_data_production:/var/lib/postgresql/data
+
   backend:
     image: akimoveug/taski_backend
     env_file: .env
     volumes:
       - static_volume:/backend_static
+    depends_on:
+      db:
+        condition: service_started
+
   frontend:
     image: akimoveug/taski_frontend  # Качаем с Docker Hub
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
+
   gateway:
     image: akimoveug/taski_gateway  # Качаем с Docker Hub
     env_file: .env
@@ -30,3 +34,8 @@ services:
       - static_volume:/staticfiles/
     ports:
       - 8000:80
+    depends_on:
+      backend:
+        condition: service_started
+      frontend:
+        condition: service_started
